# SW-555-Agile-Puff-Girls

./: .gitignore  CI_QUICKSTART.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  app.py  models.py  pyproject.toml  tstest_models.py  update_db.py
.circleci/: config.yml
.github/: README.md
.github/workflows/: ci.yml  quick-test.yml
docs/: CI.md  CUSTOMIZATION.md  DATABASE.md  DEVELOPMENT.md  QUICK_START.md  SEPARATION.md  TESTING.md  TROUBLESHOOTING.md
routes/: habits.py  theme.py
static/css/: style.css  theme.css
static/js/: theme.js
templates/: base.html  base.html.new  expense_splitter.html  habit_tracker.html  home.html  mood_journal.html  recipe_assistant.html
templates/apps/expense_splitter/: index.html
templates/apps/habit_tracker/: archived.html  index.html
templates/apps/mood_journal/: index.html
templates/apps/recipe_assistant/: index.html
templates/home/: index.html  signIn.html
tests/: __init__.py  conftest.py  test_habit_routes.py  test_models.py  test_onboarding.py  test_routes.py  test_theme.py  test_theme_routes.py
